bare_metal_example is compilable

--- a/soc/Makefile
+++ b/soc/Makefile
@@ -10,8 +10,14 @@ SOPC_FILE 		:= $(PRJ).sopcinfo
 DTS_FILE  		:= $(PRJ).dts
 BINFO_FILE 		:= board_info.xml
 DTB_FILE 		:= $(PRJ).dtb
+RBF_FILE 		:= $(PRJ).rbf
+H_DIR 			:= qsys_headers
 
 SOPC2DTS_ARGS += --bridge-removal all --clocks
+
+CMD_MKDIR := mkdir -p
+
+
 
 .PHONY: quartus_edit
 quartus_edit:
@@ -33,8 +39,15 @@ device_tree: $(DTS_FILE)
 .PHONY: blob
 blob: $(DTB_FILE)
 
+.PHONY: headers
+headers: $(H_DIR)/$(PRJ).h
+
+.PHONY: rbf
+rbf: $(RBF_FILE)
 
 
+$(RBF_FILE): $(SOF_FILE)
+	quartus_cpf -c $(SOF_FILE) $(RBF_FILE)
 
 $(DTB_FILE): $(DTS_FILE)
 	dtc -I dts -O dtb -o $(DTB_FILE) $(DTS_FILE)
@@ -45,12 +58,16 @@ device_tree_edit:
 $(DTS_FILE): $(SOPC_FILE) $(BINFO_FILE)
 	sopc2dts -i $(SOPC_FILE) -o $(DTS_FILE) $(OPC2DTS_ARGS) --board $(BINFO_FILE)
 
+$(H_DIR)/$(PRJ).h: $(SOPC_FILE)
+	$(CMD_MKDIR) $(H_DIR)
+	sopc-create-header-files $(SOPC_FILE) --output-dir $(H_DIR)
 
 $(QIP_FILE): $(QSF)
 	qsys-generate $(QSF) --synthesis=VERILOG --output-directory=$(QSD)
 
 $(SOF_FILE): $(QIP_FILE)
 	quartus_sh --flow compile  $(QPF)
+
 
 clean:
 	rm -rf 	db \
@@ -65,6 +82,8 @@ clean:
 			$(SOF_FILE) \
 			$(DTS_FILE) \
 			$(DTB_FILE) \
+			$(H_DIR)\
+			$(RBF_FILE)\
 			*.rpt \
 			*.done \
 			*.smsg \
