Adds preloader generation

--- a/sw/01_bare_metal_example/Makefile
+++ b/sw/01_bare_metal_example/Makefile
@@ -15,7 +15,19 @@ $(TARGET): bare_metal_example.o
 %.o : %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
+.PHONY: preloader
+preloader: preloader/generated/build.h
+
+preloader/generated/build.h: preloader/settings.bsp
+	bsp-generate-files --settings preloader/settings.bsp --bsp-dir ./preloader
+	make -C preloader
+
 .PHONY: clean
 clean:
-	rm -f $(TARGET) *.a *.o
+	rm -rf $(TARGET) *.a *.o \
+	  preloader/generated \
+	  preloader/uboot-socfpga \
+	  preloader/*.ds \
+	  preloader/*.bin  \
+	  preloader/Makefile
 
