Removes also the hwlib directory for cleaning

--- a/sw/01_bare_metal_example/Makefile
+++ b/sw/01_bare_metal_example/Makefile
@@ -180,6 +180,7 @@ $(SDCARD): $(PRELOADER) $(BINMKIMAGE)
 .PHONY: clean
 clean:
 	rm -rf $(TARGET) *.axf *.bin \
+	  $(HWLIB_DIR) \
 	  $(OBJDIR) \
 	  $(SDCARD) \
 	  $(PRELOADER_DIR)/generated \
