Improves dts/dtb generation and allows integration into linux

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 *.smsg
 *.done
 *.dtb
-*.dts
 *.jdi
 *.pin
 *.sld
@@ -16,6 +15,7 @@
 *.axf
 *.img
 *.qws
+*.log
 hwlib
 bare_metal_example
 sw/01_bare_metal_example/preloader/*
