--- a/soc/Makefile
+++ b/soc/Makefile
@@ -7,8 +7,10 @@ QSD := $(PRJ)
 QIP_FILE  		:= $(QSD)/synthesis/$(PRJ).qip
 SOF_FILE  		:= $(PRJ).sof
 SOPC_FILE 		:= $(PRJ).sopcinfo
-DTS_FILE  		:= $(PRJ).dts
-BINFO_FILE 		:= board_info.xml
+DTS_FILE  		:= dts/$(PRJ).dts
+DTS_FILE2  		:= dts/$(PRJ).donotuse.dts  #just for comparison
+BINFO_FILE 		:= dts/$(PRJ)_board_info.xml
+SINFO_FILE 		:= dts/$(PRJ)_system_info.xml
 DTB_FILE 		:= $(PRJ).dtb
 RBF_FILE 		:= $(PRJ).rbf
 H_DIR 			:= qsys_headers
@@ -17,6 +19,10 @@ SOPC2DTS_ARGS += --bridge-removal all --clocks
 
 CMD_MKDIR := mkdir -p
 
+SRC = ${PRJ}_top.v
+
+.PHONY: all
+all: blob rbf quartus_generate headers
 
 .PHONY: rbf
 rbf: $(RBF_FILE)
@@ -36,8 +42,11 @@ qsys_generate: $(QIP_FILE)
 .PHONY: quartus_generate
 quartus_generate:  $(SOF_FILE)
 
-.PHONY: device_tree
-device_tree: $(DTS_FILE)
+.PHONY: dtb
+dtb: $(DTB_FILE)
+
+.PHONY: example_dts
+example_dts: $(DTS_FILE2)
 
 .PHONY: blob
 blob: $(DTB_FILE)
@@ -56,10 +65,10 @@ $(DTB_FILE): $(DTS_FILE)
 	dtc -I dts -O dtb -o $(DTB_FILE) $(DTS_FILE)
 
 device_tree_edit:
-	sopc2dts -i $(SOPC_FILE) --board $(BINFO_FILE) --gui
+	sopc2dts -i $(SOPC_FILE) --board $(BINFO_FILE) --board $(SINFO_FILE) --gui
 
-$(DTS_FILE): $(SOPC_FILE) $(BINFO_FILE)
-	sopc2dts -i $(SOPC_FILE) -o $(DTS_FILE) $(OPC2DTS_ARGS) --board $(BINFO_FILE)
+$(DTS_FILE2): $(SOPC_FILE) $(BINFO_FILE) $(SINFO_FILE)
+	sopc2dts -v -i $(SOPC_FILE) -o $(DTS_FILE2) $(OPC2DTS_ARGS) --board $(BINFO_FILE) --board $(SINFO_FILE)
 
 $(H_DIR)/$(PRJ).h: $(SOPC_FILE)
 	$(CMD_MKDIR) $(H_DIR)
@@ -68,7 +77,11 @@ $(H_DIR)/$(PRJ).h: $(SOPC_FILE)
 $(QIP_FILE): $(QSF)
 	qsys-generate $(QSF) --synthesis=VERILOG --output-directory=$(QSD)
 
-$(SOF_FILE): $(QIP_FILE)
+.PHONY: $(SOPC_FILE) 
+$(SOPC_FILE): $(QIP_FILE)
+
+
+$(SOF_FILE): $(QIP_FILE) $(SRC)
 	quartus_sh --flow compile  $(QPF)
 
 
@@ -83,7 +96,7 @@ clean:
 			.qsys_edit \
 	  		$(QSD) \
 			$(SOF_FILE) \
-			$(DTS_FILE) \
+			$(DTS_FILE2) \
 			$(DTB_FILE) \
 			$(H_DIR)\
 			$(RBF_FILE)\
