--- a/sw/openocd/altera_fpgasoc.cfg
+++ b/sw/openocd/altera_fpgasoc.cfg
@@ -39,7 +39,7 @@ jtag newtap $_CHIPNAME dap -irlen 4 -ircapture 0x01 -irmask 0x0f \
 # core 1  -  0x80112000
 
 # Slow speed to be sure it will work
-adapter_khz 1000
+adapter_khz 500
 
 set _TARGETNAME1 $_CHIPNAME.cpu.0
 set _TARGETNAME2 $_CHIPNAME.cpu.1
@@ -48,18 +48,18 @@ set _TARGETNAME2 $_CHIPNAME.cpu.1
 target create $_TARGETNAME1 cortex_a -chain-position $_CHIPNAME.dap \
         -coreid 0 -dbgbase 0x80110000
 
-$_TARGETNAME1 configure -event reset-start { adapter_khz 1000 }
+$_TARGETNAME1 configure -event reset-start { adapter_khz 500 }
 $_TARGETNAME1 configure -event reset-assert-post "cycv_dbginit $_TARGETNAME1"
 $_TARGETNAME1 configure -event gdb-attach { halt }
 
 
 # A9 core 1
-#target create $_TARGETNAME2 cortex_a -chain-position $_CHIPNAME.dap \
-#        -coreid 1 -dbgbase 0x80112000
+target create $_TARGETNAME2 cortex_a -chain-position $_CHIPNAME.dap \
+        -coreid 1 -dbgbase 0x80112000
 
-#$_TARGETNAME2 configure -event reset-start { adapter_khz 1000 }
-#$_TARGETNAME2 configure -event reset-assert-post "cycv_dbginit $_TARGETNAME2"
-#$_TARGETNAME2 configure -event gdb-attach { halt }
+$_TARGETNAME2 configure -event reset-start { adapter_khz 500 }
+$_TARGETNAME2 configure -event reset-assert-post "cycv_dbginit $_TARGETNAME2"
+$_TARGETNAME2 configure -event gdb-attach { halt }
 
 proc cycv_dbginit {target} {
         # General Cortex-A8/A9 debug initialisation
