Improves GPIOs and HSP_LED dts handling

--- a/soc/dts/DE0_HSP_Example.dts
+++ b/soc/dts/DE0_HSP_Example.dts
@@ -49,65 +49,75 @@
          led_pio: gpio@0x100000010 {
             compatible = "altr,pio-16.1", "altr,pio-1.0";
             reg = <0x00000001 0x00000010 0x00000010>;
-            altr,gpio-bank-width = <8>;
+            altr,ngpio = <8>;
             resetvalue = <0>;
             #gpio-cells = <2>;
             gpio-controller;
             label = "led_pio";   
          };
 
+         // See https://github.com/torvalds/linux/blob/master/Documentation/devicetree/bindings/gpio/gpio-altera.txt
          sw_pio: gpio@0x100000000 {
             compatible = "altr,pio-16.1", "altr,pio-1.0";
             reg = <0x00000001 0x00000000 0x00000010>;
-            altr,gpio-bank-width = <4>;
+            altr,ngpio = <4>;
             resetvalue = <0>;
             #gpio-cells = <2>;
+            #interrupt-cells = <1>;
             gpio-controller;
             label = "sw_pio";   
+
          }; //end gpio
       }; //end bridge
+
 
       soc_leds: leds {
          compatible = "gpio-leds";   
 
+        led_hps0: hps0 {
+           label = "hps_led0";
+           gpios = <&portb 24 0>;
+        }; //end hps0 (led_hps0)
+
+
          led_fpga0: fpga0 {
-            label = "fpga_led0";   
-            gpios = <&led_pio 0 1>;   
+            label = "fpga_led0";
+            gpios = <&led_pio 0 0>;
          }; //end fpga0 (led_fpga0)
 
          led_fpga1: fpga1 {
-            label = "fpga_led1";   
-            gpios = <&led_pio 1 1>;   
+            label = "fpga_led1";
+            gpios = <&led_pio 1 0>;
          }; //end fpga1 (led_fpga1)
 
          led_fpga2: fpga2 {
-            label = "fpga_led2";   
-            gpios = <&led_pio 2 1>;   
+            label = "fpga_led2";
+            gpios = <&led_pio 2 0>;
          }; //end fpga2 (led_fpga2)
 
          led_fpga3: fpga3 {
-            label = "fpga_led3";   
-            gpios = <&led_pio 3 1>;   
+            label = "fpga_led3";
+            gpios = <&led_pio 3 0>;
          }; //end fpga3 (led_fpga3)
 
          led_fpga4: fpga4 {
-            label = "fpga_led4";   
-            gpios = <&led_pio 4 1>;   
+            label = "fpga_led4";
+            gpios = <&led_pio 4 0>;
          }; //end fpga4 (led_fpga4)
 
          led_fpga5: fpga5 {
-            label = "fpga_led5";   
-            gpios = <&led_pio 5 1>;   
+            label = "fpga_led5";
+            gpios = <&led_pio 5 0>;
          }; //end fpga5 (led_fpga5)
 
          led_fpga6: fpga6 {
-            label = "fpga_led6";   
-            gpios = <&led_pio 6 1>;   
+            label = "fpga_led6";
+            gpios = <&led_pio 6 0>;
          }; //end fpga6 (led_fpga6)
 
          led_fpga7: fpga7 {
-            label = "fpga_led7";   
-            gpios = <&led_pio 7 1>;   
+            label = "fpga_led7";
+            gpios = <&led_pio 7 0>;
          }; //end fpga7 (led_fpga7)
       }; //end leds (soc_leds)
 
