--- a/soc/dts/DE0_HSP_Example.dts
+++ b/soc/dts/DE0_HSP_Example.dts
@@ -39,11 +39,16 @@
                   <0x00000001 0x00000010 0xff200010 0x00000010>,
                   <0x00000001 0x00000000 0xff200000 0x00000010>;
 
-         sysid_qsys_0: sysid@0x100000020 {
-            compatible = "altr,sysid-16.1", "altr,sysid-1.0";
-            reg = <0x00000001 0x00000020 0x00000008>;
-            id = <1193046>;
-            timestamp = <1503852941>;
+         // See https://github.com/torvalds/linux/blob/master/Documentation/devicetree/bindings/gpio/gpio-altera.txt
+         sw_pio: gpio@0x100000000 {
+            compatible = "altr,pio-16.1", "altr,pio-1.0";
+            reg = <0x00000001 0x00000000 0x00000010>;
+            altr,ngpio = <4>;
+            resetvalue = <0>;
+            #gpio-cells = <2>;
+            #interrupt-cells = <1>;
+            gpio-controller;
+            label = "sw_pio";   
          };
 
          led_pio: gpio@0x100000010 {
@@ -56,18 +61,22 @@
             label = "led_pio";   
          };
 
-         // See https://github.com/torvalds/linux/blob/master/Documentation/devicetree/bindings/gpio/gpio-altera.txt
-         sw_pio: gpio@0x100000000 {
-            compatible = "altr,pio-16.1", "altr,pio-1.0";
-            reg = <0x00000001 0x00000000 0x00000010>;
-            altr,ngpio = <4>;
-            resetvalue = <0>;
-            #gpio-cells = <2>;
-            #interrupt-cells = <1>;
-            gpio-controller;
-            label = "sw_pio";   
+			pb_pio: gpio@0x100000030 {
+				compatible = "altr,pio-16.1", "altr,pio-1.0";
+				reg = <0x00000001 0x00000020 0x00000010>;
+            altr,ngpio = <2>;
+				resetvalue = <0>;
+				#gpio-cells = <2>;
+				gpio-controller;
+			};
 
-         }; //end gpio
+         sysid_qsys_0: sysid@0x100000020 {
+            compatible = "altr,sysid-16.1", "altr,sysid-1.0";
+            reg = <0x00000001 0x00000030 0x00000008>;
+            id = <1193046>;
+				timestamp = <1504811165>;
+         };
+
       }; //end bridge
 
 
