--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,6 @@ qsys_headers
 DE0_HPS_Example/
 c5_pin_model_dump.txt
 db/
-hps_isw_handoff/
+hps_isw_handoff*
 hps_sdram_p0_summary.csv
 incremental_db/
