Adds additional SPI core, mapped to the GPIO1 header (pin 0 to 3)

--- a/soc/DE0_HPS_Example.qsf
+++ b/soc/DE0_HPS_Example.qsf
@@ -109,6 +109,22 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[2]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[3]
 
 
+#============================================================
+# SPI
+#============================================================
+set_location_assignment PIN_Y15  -to SPI_MISO # GPIO_1[0]
+set_location_assignment PIN_AG28 -to SPI_MOSI # GPIO_1[1]
+set_location_assignment PIN_AA15 -to SPI_SCLK # GPIO_1[2]
+set_location_assignment PIN_AH27 -to SPI_SS_N # GPIO_1[3]
+
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SPI_MISO
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SPI_MOSI
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SPI_SCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SPI_SS_N
+
+
+
+
 
 
 #============================================================
