--- a/soc/dts/DE0_HPS_Example.dts
+++ b/soc/dts/DE0_HPS_Example.dts
@@ -35,9 +35,11 @@
          reg-names = "axi_h2f", "axi_h2f_lw";
          #address-cells = <2>;
          #size-cells = <1>;
-         ranges = <0x00000001 0x00000020 0xff200020 0x00000008>,
-                  <0x00000001 0x00000010 0xff200010 0x00000010>,
-                  <0x00000001 0x00000000 0xff200000 0x00000010>;
+			ranges = <0x00000001 0x00000030 0xff200030 0x00000008>,
+				<0x00000001 0x00000010 0xff200010 0x00000010>,
+				<0x00000001 0x00000000 0xff200000 0x00000010>,
+				<0x00000001 0x00000020 0xff200020 0x00000010>,
+				<0x00000001 0x00000040 0xff200040 0x00000020>;
 
          // See https://github.com/torvalds/linux/blob/master/Documentation/devicetree/bindings/gpio/gpio-altera.txt
          sw_pio: gpio@0x100000000 {
@@ -61,7 +63,7 @@
             label = "led_pio";   
          };
 
-			pb_pio: gpio@0x100000030 {
+			pb_pio: gpio@0x100000020 {
 				compatible = "altr,pio-16.1", "altr,pio-1.0";
 				reg = <0x00000001 0x00000020 0x00000010>;
             altr,ngpio = <2>;
@@ -70,12 +72,33 @@
 				gpio-controller;
 			};
 
-         sysid_qsys_0: sysid@0x100000020 {
+         sysid_qsys_0: sysid@0x100000030 {
             compatible = "altr,sysid-16.1", "altr,sysid-1.0";
             reg = <0x00000001 0x00000030 0x00000008>;
             id = <1193046>;
-				timestamp = <1504817015>;
+				timestamp = <1504821520>;
          };
+
+			fpga_spi: spi@0x100000040 {
+            #address-cells = <0x1>;
+            #size-cells = <0x1>;
+				compatible = "altr,spi-16.1", "altr,spi-1.0";
+				reg = <0x00000001 0x00000040 0x00000020>;
+				interrupt-parent = <&intc>;
+				interrupts = <0 40 4>;
+            num-chipselect = <0x1>;
+            status = "okay";
+
+            spidev@0x0 {
+                compatible = "spidev";
+                #address-cells = <0x1>;
+                #size-cells = <0x0>;
+                reg = <0x0>;
+                spi-max-frequency = <100000000>;
+                enable-dma = <0x1>;
+            };
+			};
+
 
       }; //end bridge
 
