Adapts openocd config

--- a/sw/openocd/altera_sockit.cfg
+++ b/sw/openocd/altera_sockit.cfg
@@ -3,7 +3,7 @@
 #
 
 interface usb_blaster
-usb_blaster_vid_pid 0x09fb 0x6010 
+usb_blaster_vid_pid 0x09fb 0x6010 0x09fb 0x6810
 usb_blaster_lowlevel_driver ublast2
 usb_blaster_firmware /opt_fpga/intelFPGA_lite/16.1/quartus/linux64/blaster_6810.hex
 usb_blaster_device_desc "USB-Blaster II"
